name:                atom-fib
version:             0.1.0.0
synopsis:            Simple device/driver Atom example
license:             MIT
license-file:        LICENSE
author:              Benjamin Jones and Lee Pike
maintainer:          bjones@galois.com, leepike@galois.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:  generated/fibDev.c
                   , generated/fibDev.h
                   , generated/fibDrv.c
                   , generated/fibDrv.h

executable atom-fib
  main-is:             Main.hs
  other-modules:       AtomFib
  build-depends:
    base >= 4.8    && < 4.9,
    atom >= 1.0.13 && < 2
  default-language:    Haskell2010

source-repository head
    type:     git
    location: git://github.com/benjaminfjones/atom-fib.git
